--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="src" path="src/test/java"/>
-	<classpathentry kind="src" path="src/test/resources"/>
 	<classpathentry kind="lib" path="project/boot/scala-2.7.7/lib/scala-compiler.jar"/>
 	<classpathentry kind="lib" path="project/boot/scala-2.7.7/lib/scala-library.jar"/>
 	<classpathentry kind="lib" path="project/boot/scala-2.7.7/org.scala-tools.sbt/sbt/0.7.4/classpath_2.7.7-0.7.4.jar"/>
@@ -24,5 +23,144 @@
 	<classpathentry kind="lib" path="lib_managed/scala_2.7.7/test/junit-4.8.1.jar"/>
 	<classpathentry kind="lib" path="lib_managed/scala_2.7.7/test/junit-interface-0.5.jar"/>
 	<classpathentry kind="lib" path="lib_managed/scala_2.7.7/test/test-interface-0.5.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-announcements"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-api-support"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-application"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-asiakas-ods"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-aspa"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-batchrunner-war"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-billing-api"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-billing-workflows"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-billingrunner-api"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-cache"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-cacheserver"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-cacheserver-api"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-common-test"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-common-war-resources"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-core-domain"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-core-wicket"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-corporate-api"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-corporate-application"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-corporate-application-infra"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-corporate-application-tupas"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-corporate-base"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-corporate-billing"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-corporate-customer-notification-api"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-corporate-database-utils"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-corporate-domain"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-corporate-domainname"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-corporate-domainTest"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-corporate-ip-network-management-api"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-corporate-ip-network-management-application"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-corporate-ip-network-management-aspa"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-corporate-ip-network-management-email-services"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-corporate-ip-network-management-fis-api"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-corporate-ip-network-management-http-services"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-corporate-ip-network-management-local-services"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-corporate-ip-network-management-ui"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-corporate-order-status"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-corporate-ordering"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-corporate-test-utils"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-corporate-tupas"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-corporate-ui"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-corporate-webform"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-customerfeedback"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-dealerweb"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-device-catalog"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-device-store"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-dialog-service"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-domainname"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-ecloud"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-ecloud-service"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-elias"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-email"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-epp-management"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-external-integration-test"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-filtering-ui"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-fis"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-fis-messages"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-guicecontext"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-iisi-application"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-inla-reporting"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-instantlink"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-invoices"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-jason"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-karpo"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-legacy-remoting"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-legacy-workflows"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-license-management"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-logistics"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-m2mip-application"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-matkapuhelintuki-aspa-ui"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-matkapuhelintuki-domain"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-matkapuhelintuki-domain-implementation"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-matkapuhelintuki-oe-ui"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-matkapuhelintuki-sadm-adapter"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-matkapuhelintuki-sadm-api"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-matkapuhelintuki-tools"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-matkapuhelintuki-utils"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-mipa"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-mipa2jpd"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-mobile-id"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-net-wrapper"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-network-services"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-network-services-ui"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-number-reservation"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-oea-application"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-oeautil"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-oedb-schema-management"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-omaelisa-authentication"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-omaelisa-configuration"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-omaelisa-domain"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-omaelisa-saml"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-order-error-management"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-osre"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-ossi"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-payment"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-pctestdata"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-pcutil"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-pcutil-wicket"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-performancestatistics"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-platform"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-portti"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-radius"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-remoting"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-remoting-framework"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-remoting-servlets"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-remoting-war"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-residential-application"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-residential-domain"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-residential-ordering"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-runtime-interceptors"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-sales-structure"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-sales-structure-ui"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-saml"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-sat"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-scheduler"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-service-injector"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-service-support"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-simcards"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-sipu"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-sms"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-soap"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-staging-database"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-subvention"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-super"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-tarkki-ui"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-tarkki-war"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-tellus"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-tellus-legacy"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-template"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-testutilities"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-tupas"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-vdi"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-webform"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-webstore-aspa"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-workflow-engine"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-workflow-scheduled-jobs"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-workflow-war"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-ya-front"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-yksityisille"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omaelisa-yksityisille-saml"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
